# src/main/resources/openApi/api.yaml
@@ -1,31 +1,120 @@
 openapi: "3.0.0"
 info:
-  title: Api for credit card issuing
-  description: Api can be used to crete request, issues and search for credit card
-  version: 1.0.0
+  title: Api for credit card print
+  description: Api can be used to crete request, print and search for credit card
+  version: 1.0.1
 paths:
-  /credit-card:
+  /credit-card-print:
     get:
-      summary: Create credit card
-      operationId: issueCreditCard
+      summary: 'Search for credit card'
+      description: |
+        Can search using one of the optional params first name, last name or personal identification Number (OIB).    
+        If param is not specified return all.  
+        If nothing is found returns empty list.
+      operationId: searchCreditCard
+      parameters:
+          - in: query
+            name: firstName
+            schema:
+             type: string
+            required: false
+            description: Search by user first name
+          - in: query
+            name: lastName
+            schema:
+             type: string
+            required: false
+            description: Search by user last name
+          - in: query
+            name: oib
+            schema:
+             type: string
+            required: false
+            description: Search by user personal identification number (OIB)
+      responses:
+        '2XX':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                 $ref: '#/components/schemas/CreditCardPrintDetailsDto'
+        '4XX':
+          description: The server cannot or will not process the request due to malformed request.
+        '5XX':
+          description: Problem on the server, try again latter.
+        default:
+          description: Unexpected error
+    post:
+      summary: Add a new credit card for print
+      description: |
+        Inserting an individual person for credit card print with all relevant attributes (First Name, Last Name, OIB, Status).  
+        Default status (NO_ACTIVE) is set.
+      operationId: insertCreditCard
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreditCardPrintInsertDto'
       responses:
         '201':
           description: Created
+    put:
+      summary: For found individual by oib generate a text file a start process of credit card printing.
+      description: |
+        Process of credit card printing can be started only for individual person credit card print request in status NO_ACTIVE.  
+        Returns the status indicating success of process.  
+        Returns IN_PROCESS when file is generated. Printing process is started, waiting for result.  
+        Returns ACTIVE if credit card is printed and active.  
+        Returns BLOCKED if credit card is not printed. Process of printing failed.
+      operationId: printCreditCard
+      parameters:
+        - in: path
+          name: oib
+          required: true
+          schema:
+            type: string
+      responses:
+        '2XX':
+          description: OK
           content:
             application/json:
               schema:
                 type: object
-                $ref: '#/components/schemas/IssuingDto'
-        '400':
-          description: Bad request
-        default:
-          description: Unexpected error
+                properties:
+                  status:
+                    type: string
+                    description: Status of the print
 components:
   schemas:
-    IssuingDto:
+    CreditCardPrintDetailsDto:
       type: object
       required:
-        - name
+        - firstName
+        - lastName
+        - oib
+        - status
       properties:
-        name:
+        firstName:
+          type: string
+        lastName:
+          type: string
+        oib:
+          type: string
+        status:
+          type: string
+    CreditCardPrintInsertDto:
+      type: object
+      required:
+        - firstName
+        - lastName
+        - oib
+      properties:
+        firstName:
+          type: string
+        lastName:
+          type: string
+        oib:
           type: string
